--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,20 @@
+* { padding: 0; margin: 0; }
+
+html, body, #root {
+  min-height: 100% !important;
+  height: 100%;
+  width: 100%;
+  /* Prevent unwanted touch events */
+  position: fixed;
+  /* Remove elastic effect on iOS */
+  overscroll-behavior-y: none;
+}
+
+.fullheight {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
