--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,11 +10,6 @@ html, body, #root {
   overscroll-behavior-y: none;
 }
 
-.fullheight {
-  width: 100%;
-  height: 100%;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -28,4 +23,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.fullheight {
+  width: 100%;
+  height: 100%;
+}
+
+.nicefont {
+  font-family: 'Baloo Paaji 2', cursive;
 }
