--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,30 @@ html, body, #root {
   overscroll-behavior-y: none;
 }
 
+@media only screen and (min-width: 781px) {
+  html {
+    font-size: 32px
+  }
+}
+
+@media only screen and (max-width: 780px) {
+  html {
+    font-size: 20px
+  }
+}
+
+@media only screen and (max-width: 530px) {
+  html {
+    font-size: 16px
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  html {
+    font-size: 11px
+  }
+}
+
 body {
   margin: 0;
   padding: 0;
